--- a/config.template.json
+++ b/config.template.json
@@ -6,13 +6,15 @@
     "enable_counter": true,
     "enable_timestamp": true,
     "enable_test": true,
+    "have_offsetof": false,
+    "have_static_assert": true,
     "filename_header": "littletrace.h",
     "filename_source": "littletrace.c",
     "filename_test": "littletrace_test.c",
     "filename_freertos_header": "freertos_trace_config.h",
     "function_name_begin_update": "trace_update_begin",
     "function_name_end_update": "trace_update_end",
-    "function_name_assert": "assert",
+    "function_name_assert": null,
     "function_name_get_timestamp": "trace_get_timestamp",
     "function_name_init_trace": "trace_init",
     "function_name_update_trace": "trace_update",
@@ -27,6 +29,7 @@
     "typename_trace_buffer": "trace_buffer_t",
     "typename_trace_entry": "trace_entry_t",
     "freertos_enable": true,
+    "custom_hooks": [],
     "freertos_queues": ["ADC", "UXR1", "UAR2a"],
     "freertos_tasks": ["tADC", "tUXR1", "tUAR2a"],
     "freertos_timers": ["tiADC", "tiUXR1", "tiUAR2a"],
